core-web/apps/dotcms-ui/src/app/portlets/dot-pages/dot-pages-favorite-panel/dot-pages-favorite-panel.component.scss
@use "variables" as *;

::ng-deep {
    .p-panel-toggleable {
        border: 1px solid $color-palette-gray-300;
        cursor: pointer;

        &.p-panel-expanded {
            border-color: $white;
            cursor: default;
        }
    }

    .p-panel-header {
        font-size: $font-size-xl;
        margin: $spacing-1 0;
        padding: $spacing-3 0;
        position: relative;

        .p-panel-icons span {
            color: $color-palette-primary;
            font-size: $font-size-xl;
            margin-left: $spacing-1;
            margin-right: $spacing-2;
        }
    }

    .dot-pages-panel-action__button {
        display: none;
        position: absolute;
        right: $spacing-3;
        top: $spacing-1;

        span.p-button-label {
            font-size: $font-size-md;
        }
    }

    .p-panel-expanded .dot-pages-panel-action__button {
        display: block;
        position: absolute;
    }

    .p-toggleable-content .p-panel-content {
        column-gap: $spacing-4;
        row-gap: $spacing-4;
        display: grid;
        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
        height: 266px;
        overflow: hidden;
        position: relative;
    }

    .dot-pages-panel__expanded .p-toggleable-content .p-panel-content {
        overflow: unset;
        height: unset;
    }

    .dot-pages-panel__empty-state .p-toggleable-content .p-panel-content {
        height: 250px;
    }

    dot-pages-card,
    dot-pages-card-empty {
        min-height: 250px;

        p-card {
            cursor: pointer;
        }
    }

    .dot-pages-empty__container {
        align-items: center;
        display: flex;
        flex-direction: column;
        left: 0;
        margin-left: auto;
        margin-right: auto;
        position: absolute;
        right: 0;
        top: 45px;
        width: max-content;

        i.pi {
            color: $color-palette-primary;
            font-size: $font-size-xxl;
            margin-bottom: $spacing-3;
        }
    }
}

.dot-pages-empty__header {
    font-size: large;
}

.dot-pages-empty__content {
    color: $color-palette-gray-700;
    text-align: center;
}

p-panel {
    display: block;
    margin-bottom: $spacing-5;
}

